# hoppr

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.cjs  install.ps1  install.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
docs/: cli.md  configuration.md  design-system.md  development.md  keybindings.md  sync.md
docs/superpowers/plans/: 2026-05-17-install-script.md
docs/superpowers/specs/: 2026-05-17-install-script-design.md
src/: app.rs  cli.rs  config.rs  connect.rs  editor.rs  favorites.rs  history.rs  main.rs  sync.rs  terminal.rs  theme.rs  ui.rs
